kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: palestina
  labels:
    app: palestina
spec:
  replicas: 1
  selector:
    matchLabels:
      app: palestina
  template:
    metadata:
      labels:
        app: palestina
    spec:
      containers:
        - name: palestina
          image: palestina
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 25Mi
              cpu: 25m
            limits:
              memory: 25Mi
              cpu: 25m
