kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: palestina
spec:
  selector:
    app: palestina
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
