kustomize/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: enable-cors
spec:
  headers:
    accessControlAllowOriginList:
      - "https://smrtna-kazen-izrael.djnd.si"
      - "https://smrtna-kazen-izrael.danesjenovdan.si"
    accessControlAllowMethods:
      - GET
      - POST
      - PUT
      - DELETE
      - OPTIONS
    accessControlAllowHeaders:
      - "*"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: palestina
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    traefik.ingress.kubernetes.io/router.middlewares: palestina-enable-cors@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - smrtna-kazen-izrael.djnd.si
        - smrtna-kazen-izrael.danesjenovdan.si
      secretName: palestina-tls
  rules:
    - host: smrtna-kazen-izrael.djnd.si
      http: &http_paths
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: palestina
                port:
                  number: 80
    - host: smrtna-kazen-izrael.danesjenovdan.si
      http: *http_paths
